freesia/manifests/voidauth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voidauth
  namespace: voidauth
  labels:
    app.kubernetes.io/name: voidauth
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: voidauth
